--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -175,7 +175,7 @@
   .career-info-in,
   .career-info-box p {
     width: 100%;
-    padding-left: 10%;
+    padding-left: 15px;
     box-sizing: border-box;
   }
   .career-timeline {
@@ -203,7 +203,7 @@
   }
   .career-info-in,
   .career-info-box p {
-    padding-left: 5%;
+    padding-left: 15px;
   }
   .career-section {
     padding-top: 90px;
