--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-content: stretch;
-  padding-left: 80px;
+  padding-left: 5%;
 }
 .work-flex {
   width: max-content;
@@ -179,6 +179,30 @@
   .work-flex {
     margin-left: -30px;
     padding-right: 45px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .work-box {
+    width: 90vw;
+    min-width: 90vw;
+    padding: 20px;
+    gap: 30px;
+  }
+  .work-flex {
+    margin-left: -20px;
+    padding-right: 30px;
+  }
+  .work-section h2 {
+    font-size: 40px;
+    margin-top: 50px;
+  }
+  .work-title h3 {
+    font-size: 30px;
+    line-height: 30px;
+  }
+  .work-info h4 {
+    font-size: 16px;
   }
 }
 
