--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ body {
   height: auto;
   background-color: #000;
   flex-grow: 1;
-  --cWidth: calc(100% - 30px);
+  --cWidth: calc(100% - 20px);
   --cMaxWidth: 1920px;
   max-width: 100vw;
   overflow-x: hidden;
@@ -134,6 +134,12 @@ body {
 @media screen and (min-width: 768px) {
   body {
     --cWidth: 94%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    --cWidth: calc(100% - 15px);
   }
 }
 
